2008-11-24  Evgeniy Khramtsov <ekhramtsov@process-one.net>

	* src/eldap/Makefile.in: added +optimize and +driver
	compilation options
	* src/eldap/Makefile.win32: Likewise

2008-11-23  Alexey Shchepin  <alexey@process-one.net>

	* src/ejabberd_receiver.erl: Hibernate after timeout
	* src/ejabberd_frontend_socket.erl: Likewise

2008-11-12  Badlop  <badlop@process-one.net>

	* src/web/ejabberd_http.erl: Include recognized headers in
	request_headers as atoms, and others as strings (EJAB-778).
	URL path should be tokenized by / and then decoded (EJAB-786).

	* doc/guide.tex: Improve legibility of mod_irc example config

2008-11-10  Alexey Shchepin  <alexey@process-one.net>

	* src/tls/tls_drv.c: Don't create a SSL context on every
	connection and disable SSLv2 on outgoing connections (EJAB-781)

2008-11-08  Mickael Remond  <mremond@process-one.net>

	* src/ejabberd_s2s_out.erl: exports the DNS resolution
	function.

2008-11-06  Badlop  <badlop@process-one.net>

	* src/extauth.erl: When the extauth call fails or timeouts, deny
	authorization. Use two timeouts: 60s for script initialization and
	10s for regular calls. (thanks to Kevin Crosbie from
	Ravenpack) (EJAB-627)

2008-11-03  Alexey Shchepin  <alexey@process-one.net>

	* src/ejabberd_c2s.erl: Disable zlib when STARTTLS is required

2008-10-27  Badlop  <badlop@process-one.net>

	* src/Makefile.in (clean-local): Delete also ejabberdctl.example

2008-10-25  Badlop  <badlop@process-one.net>

	* src/translate.erl: When a translation file can't be loaded, show
	detailed error message

	* src/ejabberd_ctl.erl: If ejabberd didn't start correctly:
	'ejabberdctl status' suggests to look in log files; any other
	ejabberdctl command shows 'status'.

	* src/ejabberd_app.erl: Open ejabberd.log sooner, so errors during
	ejabberd initialization are logged in that file (EJAB-777). Write
	a log message when ejabberd finishes the start or stop.

2008-10-24  Badlop  <badlop@process-one.net>
