@@ -1,3 +1,8 @@
+2008-10-17  Christophe Romain <christophe.romain@process-one.net>
+
+	* src/mod_pubsub/node_pep.erl: Fix get_node_affiliations resultset to
+	owner (Thanks to Michal Schmidt)
+
 2008-11-24  Evgeniy Khramtsov <ekhramtsov@process-one.net>
 
 	* src/eldap/Makefile.in: added +optimize and +driver
